--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
 		<artifactId>mahout-mr</artifactId>
 		<version>0.10.0</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.mahout</groupId>
+		<artifactId>mahout-integration</artifactId>
+		<version>0.10.0</version>
+	</dependency>
   </dependencies>
 </project>
