--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         <version>3.8.1</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-math3</artifactId>
+		<version>3.2</version>
+	</dependency>
     <dependency> 
 	    <groupId>org.apache.hadoop</groupId>  
 	    <artifactId>hadoop-common</artifactId>  
